# duanzh

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_chapters.txt  test_chinese.txt
k8s/: deployment.yaml  secrets.yaml  service.yaml
output/: 06e3f032-90ff-48b7-9319-cb27521313af.epub  c480cfc4-2cbd-41f9-96fe-d174616e486c.epub
src/: main.rs
src/models/: mod.rs
src/services/: chapterizer.rs  llm.rs  mod.rs
static/: index.html  script.js  styles.css
