[package]
name = "duanzh"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
epub-builder = "0.5"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.0"
